--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div class="cards">
 
             <div class="card">
-                <img src="images/singapore.jpg" alt="Singapore">
+                <img src="singapore.jpg" alt="Singapore">
                 <h3>Singapore</h3>
                 <p>"Where modern wonders meet rich culture."</p>
             </div>
 
             <div class="card">
-                <img src="images/bali.jpg" alt="Bali">
+                <img src="bali.jpg" alt="Bali">
                 <h3>Bali</h3>
                 <p>"Island of gods, beaches, and endless peace."</p>
             </div>
 
             <div class="card">
-                <img src="images/maldives.jpg" alt="Maldives">
+                <img src="maldives.jpg" alt="Maldives">
                 <h3>Maldives</h3>
                 <p>"Paradise where the ocean touches your soul."</p>
             </div>
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
